--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 "detalhes":"Detalhes",
 
-"textatualizado":"EU PULO O VÍDEO KKK",
+"textatualizado":"J4T0D0SH4CKERS",
 
 "txthours":"10:30 da manhã",
 
