--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 {
 
-"versao":"2.0",
+"versao":"1.0",
 
 "aviso":"\u003cb\u003eAviso, \u003cfont color\u003d\"#FF0000\"\u003e\u003cins\u003e#90K\u003c/ins\u003e",
 
-"mensagem":"\u003cb\u003eINSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\u003c/b\u003e\u003cfont color\u003d\u0027#FF0000\u0027\u003e\u003cbr\u003e\u003cbr\u003e\u003cb\u003eFIM DO INJETOR, SERÁ?😞\u003c/font\u003e",
+"mensagem":"\u003cb\u003eINSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\u003c/b\u003e\u003cfont color\u003d\u0027#FF0000\u0027\u003e\u003cbr\u003e\u003cbr\u003e\u003cb\u003eESSA VERSÃO ESTÁ FUNCIONANDO TAMBÉM EM ANDROID 11 E 12!!\u003c/font\u003e",
 
 "ok":"\u003cfont color\u003d\"#FF0000\"\u003e\u003cb\u003eok\u003c/b\u003e",
 
