--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 "linkfriend":"https://youtu.be/3PezEdMY3es",
 
-"status":"atualizado",
+"status":"atualizado!",
 
 "linkweverson":"https://youtu.be/3PezEdMY3es",
 
