--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 "userletramaior":"JATO90K",
 
-"linkcompartilhar":"https://api.whatsapp.com/send?phone=&text=INSCREVA-SE%20no%20Canal%20e%20Venha%20Baixar%20o%20Regedit%20FFH4X%20de%20graça:%20https://youtu.be/_pNkY5KZn7w",
+"linkcompartilhar":"https://api.whatsapp.com/send?phone=&text=INSCREVA-SE%20no%20Canal%20e%20Venha%20Baixar%20o%20Regedit%20FFH4X%20de%20graça:%20https://youtu.be/Z0InKJLZwjI",
 
 "criador":"Criado Por Jato v1.70.X",
 
