--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 {
 
-"versao":"1.0",
+"versao":"2.0",
 
 "aviso":"\u003cb\u003eAviso, \u003cfont color\u003d\"#FF0000\"\u003e\u003cins\u003e#90K\u003c/ins\u003e",
 
-"mensagem":"\u003cb\u003eINSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\u003c/b\u003e\u003cfont color\u003d\u0027#FF0000\u0027\u003e\u003cbr\u003e\u003cbr\u003e\u003cb\u003eESSA VERSÃO ESTÁ FUNCIONANDO TAMBÉM EM ANDROID 11 E 12!!\u003c/font\u003e",
+"mensagem":"\u003cb\u003eINSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\u003c/b\u003e\u003cfont color\u003d\u0027#FF0000\u0027\u003e\u003cbr\u003e\u003cbr\u003e\u003cb\u003eVersao V37\u003c/font\u003e",
 
 "ok":"\u003cfont color\u003d\"#FF0000\"\u003e\u003cb\u003eok\u003c/b\u003e",
 
@@ -20,7 +20,7 @@
 
 "linkfriend":"https://youtu.be/3PezEdMY3es",
 
-"status":"atualizado!",
+"status":"atualizado",
 
 "linkweverson":"https://youtu.be/3PezEdMY3es",
 
@@ -50,7 +50,7 @@
 
 "linktutorial":"https://youtu.be/8-phS4We6T0",
 
-"linkdownload":"https://apkadmin.com/a06tyn6sqrwh/FFH4X_DATA_ANDROID_11_E_12.zip.html",
+"linkdownload":"https://apkadmin.com/t5unrv3u10ta/FFH4X_PLUS_V1_ANDROID_11_e_12.apk.html",
 
 "linkbaixar":"https://2no.co/1v9Wm7.zip",
 
