--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 "safe":"COMPLETO",
 
-"linktutorial":"https://youtu.be/8-phS4We6T0",
+"linktutorial":"https://youtu.be/YtBpcW-5OGg",
 
 "linkdownload":"https://apkadmin.com/t5unrv3u10ta/FFH4X_PLUS_V1_ANDROID_11_e_12.apk.html",
 
