--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 "nomedocanal":"Mr HackrV2",
 
-"link2":"https://youtu.be/3PezEdMY3es",
+"link2":"https://youtu.be/HjXxy-3gi-s",
 
-"linkfriend":"https://youtu.be/3PezEdMY3es",
+"linkfriend":"https://youtu.be/HjXxy-3gi-s",
 
 "status":"atualizado",
 
-"linkweverson":"https://youtu.be/3PezEdMY3es",
+"linkweverson":"https://youtu.be/HjXxy-3gi-s",
 
 "aviso2":"INSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!",
 
