--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 "cancelar":"",
 
-"link":"https://youtube.com/channel/UC9uInKpZ1B_NzRqqGqzsCfA",
+"link":"https://youtu.be/Z0InKJLZwjI",
 
 "nomedocanal":"Mr HackrV2",
 
@@ -68,9 +68,9 @@
 
 "txthours":"10:30 da manhã",
 
-"linkmeuvideo":"https://youtube.com/channel/UC9uInKpZ1B_NzRqqGqzsCfA",
+"linkmeuvideo":"https://youtu.be/Z0InKJLZwjI",
 
-"linkupdate":"https://youtube.com/channel/UC9uInKpZ1B_NzRqqGqzsCfA",
+"linkupdate":"https://youtu.be/Z0InKJLZwjI",
 
 "okupdate":"",
 
