--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
 
 "aviso":"\u003cb\u003eAviso, \u003cfont color\u003d\"#FF0000\"\u003e\u003cins\u003e#90K\u003c/ins\u003e",
 
-"mensagem":"\u003cfont color\u003d\"#000000\"\u003eNOVA  ATUALIZAÇÃO! ATUALIZE PARA A VERSÃO V38\u003cbr\u003e\u003cbr\u003eO download está nós comentários fixado do vídeo novo.\u003cbr\u003e\u003cbr\u003eEnglish:\u003cbr\u003eNEW UPDATE! UPDATE TO VERSION V38.\u003cbr\u003e\u003cbr\u003eDownload is in the new video comment.\u003c/font\u003e",
+"mensagem":"\u003cb\u003eINSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!\u003c/b\u003e\u003cfont color\u003d\u0027#FF0000\u0027\u003e\u003cbr\u003e\u003cbr\u003e\u003cb\u003eInscreva-se no canal meu canal novo, o outro a canal a garena desgraçada aplicou 10 strikes, a v39 irá sair no canal novo.\u003c/font\u003e",
 
 "ok":"",
 
-"cancelar":"\u003cfont color\u003d\"#FF0000\"\u003e\u003cb\u003eok\u003c/b\u003e",
+"cancelar":"OK",
 
-"link":"https://youtu.be/she7_wOkRlk",
+"link":"https://youtu.be/3tI_7Ol1hh4",
 
-"nomedocanal":"Mr HackrV2FIX",
+"nomedocanal":"Mr HackrV2",
 
-"link2":"https://youtu.be/NHu5niSXf78",
+"link2":"https://youtu.be/FEQ0BjV2SsI",
 
-"linkfriend":"https://youtu.be/NHu5niSXf78",
+"linkfriend":"https://youtu.be/FEQ0BjV2SsI",
 
 "status":"atualizado",
 
-"linkweverson":"https://youtu.be/NHu5niSXf78",
+"linkweverson":"https://youtu.be/FEQ0BjV2SsI",
 
 "aviso2":"INSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!",
 
@@ -30,11 +30,13 @@
 
 "offline":"INSCREVA-SE NO CANAL PARA DESBLOQUEAR",
 
-"usuario":"Jato85k",
+"usuario":"Jato90k",
 
 "senha":"08022022021",
 
-"userletramaior":"JATO85K",
+"userletramaior":"JATO90K",
+
+"linkcompartilhar":"https://api.whatsapp.com/send?phone=&text=INSCREVA-SE%20no%20Canal%20e%20Venha%20Baixar%20o%20Regedit%20FFH4X%20de%20graça:%20https://youtu.be/she7_wOkRlk",
 
 "criador":"Criado Por Jato v1.70.X",
 
@@ -46,9 +48,9 @@
 
 "safe":"COMPLETO",
 
-"linktutorial":"https://youtu.be/wFaLMmCQDW0",
+"linktutorial":"https://youtu.be/YtBpcW-5OGg",
 
-"linkdownload":"https://apkadmin.com/w4uu0t3d2dxo/PASTA_ANDROID_11_V1.69.X.zip.html",
+"linkdownload":"https://apkadmin.com/t5unrv3u10ta/FFH4X_PLUS_V1_ANDROID_11_e_12.apk.html",
 
 "linkbaixar":"https://2no.co/1v9Wm7.zip",
 
@@ -56,19 +58,19 @@
 
 "curiosoaq":"kkk",
 
-"textupdate":"https://api.whatsapp.com/send?phone=+5519987145609&text=Ol%C3%A1%2C%20quero%20comprar%20o%20mod%20menu%2C%20quais%20s%C3%A3o%20as%20formas%20de%20pagamento%3F",
+"textupdate":"https://api.whatsapp.com/send?phone=+5511968863503&text=Ol%C3%A1%2C%20quero%20comprar%20o%20mod%20menu%2C%20quais%20s%C3%A3o%20as%20formas%20de%20pagamento%3F",
 
 "textmensagem":"INSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!",
 
 "detalhes":"Detalhes",
 
-"textatualizado":"EU PULO O VÍDEO KKK",
+"textatualizado":"J4T0D0SH4CKERS191934",
 
 "txthours":"10:30 da manhã",
 
-"linkmeuvideo":"https://youtu.be/Z0InKJLZwjI",
+"linkmeuvideo":"https://youtu.be/she7_wOkRlk",
 
-"linkupdate":"https://youtu.be/she7_wOkRlk",
+"linkupdate":"https://youtu.be/3tI_7Ol1hh4",
 
 "okupdate":"",
 
