--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 "cancelar":"\u003cfont color\u003d\"#FF0000\"\u003e\u003cb\u003eok\u003c/b\u003e",
 
-"link":"https://youtu.be/jk02MN0MTFs",
+"link":"https://youtu.be/hjR2C4JZ43w",
 
 "nomedocanal":"Mr HackrV2",
 
